--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "node test.js"
+    "test": "node test.js",
+    "build": "cd .heroku/node/cache && ls -a"
   },
   "dependencies": {
     "ejs": "^2.5.6",
-    "express": "^4.15.2"
+    "express": "^4.17.1"
   },
   "devDependencies": {
     "request": "^2.81.0",
