--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "start": "node index.js",
     "test": "node test.js",
-    "build": "cd .heroku/node/cache && ls -a"
+    "build": "./build.sh"
   },
   "dependencies": {
     "ejs": "^2.5.6",
